--- a/events/festival-santarcangelo.html
+++ b/events/festival-santarcangelo.html
@@ -24,35 +24,12 @@
 <body>
 
   <header>
-    <div class="collapse bg-dark" id="navbarHeader">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
-            <h4 class="text-white">About</h4>
-            <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites
-              or contact information.</p>
-          </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4 class="text-white">Contact</h4>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Follow on Twitter</a></li>
-              <li><a href="#" class="text-white">Like on Facebook</a></li>
-              <li><a href="#" class="text-white">Email me</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="../index.html" class="navbar-brand d-flex align-items-center">
-          <img src="../img/logo/santarcangeloLogoScritto.jpeg" width="250px" height="90px">
+          <img src="../img/logo/santarcangeloLogoScritto.png" width="250px" height="90px">
           <strong></strong>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
       </div>
     </div>
   </header>
@@ -61,7 +38,8 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 id="pageTitle" class="jumbotron-heading">Santarcangelo Festival 2050</h1>
-        <p id="pageLittleDescription" class="lead text-muted">Descrizione al fly di Santarcangelo Festival 2050.</p>
+        <p id="articleDescription" class="text-muted">
+        </p>
         <p>
           <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
         </p>
@@ -70,72 +48,11 @@
 
     <section class="p-5">
       <div id="article">
-        <p>
-          È in movimento il Futuro Fantastico di Santarcangelo Festival 2021. Futuro Fantastico (II movimento) andrà in scena dall’8 al 18 luglio e il programma, firmato da Motus di Enrico Casagrande e Daniela Nicolò, è pronto a dispiegare le sue
-          vele. L’incisivo progetto artistico basato sull’internazionalità, sul rapporto tra arte e dimensione pubblica e sul coinvolgimento della comunità, torna prepotentemente in superficie dopo essere stato affossato dalla pandemia con l’aggiunta
-          di nuove riflessioni che la stessa ha stimolato. Si tratta dell’ultimo atto del cinquantennale che, a causa dell’emergenza pandemica si è dilatato nell’arco di dodici mesi e ha visto il progetto “Santarcangelo Festival 2050” ripensato e
-          rivisto. Ora, come parafrasato dal sottotitolo Festival mutaforme di meduse, cyborg e specie compagne, i Motus, giunti all’ultimo anno di direzione artistica, hanno scelto di fare riferimento alla forza magica, irrequieta e mutaforme che il
-          festival incarna, con un’anima per sua natura sempre in trasformazione e ibridazione, così come l’arte scenica contemporanea di cui è l’espressione più longeva in Italia.
+        <p id="articleText">
         </p>
-
-        <h4>Programma e tematiche</h4>
-        <p>
-          A luglio Santarcangelo dei Teatri farà ripartire il viaggio del festival che si riapproprierà della sua dimensione internazionale con spirito di forte apertura e capacità di generare contaminazioni sempre nuove e con mondi lontani.
-          Obiettivo creare processi partecipativi invadendo spazi pubblici, naturali e urbani, attraverso più capitoli tematici: Bestiari Fantastici, Interzone, Begin Anywhere, Nuove Alleanze, HTBT How To Be Together, H24 Accaventiquattro,
-          Cinquantennale. Ciascuno a sviluppare una propria progettualità.
-        </p>
-
-        <h4>Bestiari Fantastici</h4>
-        <p>
-          È la sezione al femminile che accoglierà artiste provenienti da America Latina, Africa e Asia, dove emergono generazioni impegnate in percorsi di decolonizzazione con opere sulla crisi climatica e la fine dell’Antropocene. Tra le
-          protagoniste il volto asiatico dell’artista taiwanese Betty Apple, trasformato digitalmente per raccontare l’abbattimento delle barriere tra umani, animali, vegetali, materia inorganica. E ancora dal Cile Manuela Infante, dal Messico la
-          coreografaAmanda Piña; dal Brasile la performer Gabriela Carneiro; dal Ghana l’artista transgender Va-Bene Elikem Fiatsi.E per l’Italia Ermanna Montanari / Teatro delle Albe.
-        </p>
-
-        <h4>Interzone</h4>
-        <p>
-          Sezione pronta a ospitare opere eclettiche figlie di progetti ibridanti forme e codici differenti come quello di Romeo Castellucci musicato da Scott Gibbons. Ambito in cui sono collocate l’anteprima del lavoro della compagnia
-          Deflorian/Tagliarini dedicato al centenario di Fellini e l’azione site specific per celebrare i 30 anni di Mutonia. Qui è ricompresa anche l’offerta cinematografica. Cinema che diventerà nomadico e performativo grazie alla collaborazione
-          con Cinema du Desert, un camion dotato di un impianto fotovoltaico che inviterà a esplorare location inusuali e remote, a stretto contatto con la natura.
-        </p>
-
-        <h4>Begin Anywhere</h4>
-        <p>
-          È dedicata a giovani artiste e artisti la sezione che avrebbe dovuto andare in scena a dicembre 2020 in occasione di “Winter Is Coming”. Ora tutti loro potranno presentare dal vivo spettacoli e interventi site specific. Ad essi si aggiunge
-          il progetto “Incroci” che coinvolge 50 ragazze e ragazzi migranti, rifugiati e richiedenti asilo, in un percorso di rete che coinvolge diverse realtà italiane.
-        </p>
-
-        <h4>Nuove Alleanze</h4>
-        <p>
-          Qui sono inseriti i processi di partecipazione che coinvolgono cittadini e comunità. Uno di questi sarà curato da Bluemotion / Fanny &amp; Alexander. Un altro da Mara Oscar Cassiani, arteficedella tappa conclusiva di “Be Water, My Friends”,
-          inserito nel progetto europeo “Be Part”.
-        </p>
-
-        <h4>HTBT How to be together</h4>
-        <p>
-          Si tratta di un ampio progetto di formazione e ricerca che comporterà la realizzazione di un villaggio temporaneo ecosostenibile ospiterà per l’intera durata del Festival un gruppo di 50 artiste e artisti da tutta Europa che parteciperanno
-          a 5 laboratori condotti dalle principali Accademie e Teatri europei.
-        </p>
-
-
-        <h4>Eventi a ogni oradel giorno e della notte</h4>
-        <p>
-          Per celebrare al meglio i 50 anni ci saranno eventi performativi ad ogni ora del giorno e della notte come svela il titolo della sezione “H24 Accaventiquattro”. Ciò per favorire la massima partecipazione di tutte le fasce di pubblico e
-          rispondere alla crisi pandemica con nuove pratiche di vicinanza in spazi aperti. Tra questi il Parco Baden-Powell trasformato in anfiteatro multiforme con spettacoli inattesi notte e dì. Tanti anche i concerti e le proposte in Piazza con il
-          Liscio, in omaggio a Raoul Casadei, coi laboratori del Teatro Patalò della Non-scuola – Teatro delle Albe e il workshop per creare strumenti musicali, gli incontri di approfondimento, il progetto radiofonico “Kin”. Le celebrazioni del
-          cinquantennale saranno protagoniste della giornata di apertura con la presentazione del libro sulla storia del festival, curato da Roberta Ferraresi, Corraini Edizioni, e del documentario “50 Santarcangelo Festival”, di Mellara / Rossi per
-          Mammut Film.
-        </p>
-
       </div>
     </section>
 
-    <div class="album p-5 bg-light">
-      <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle
-        santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
-      </div>
-      <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(2)">
-    </div>
     </div>
   </main>
 
@@ -149,5 +66,13 @@
   </footer>
 
 </body>
+<script type="text/javascript">
+  $(document).ready(function() {
+      $.getJSON("../articles/articles.json", function(json) {
+          articleText.innerHTML = json["Articles"][2]["Text"];
+          articleDescription.innerHTML = json["Articles"][4]["Description"];
+      });
+  });
+</script>
 
 </html>
