--- a/services/cartella-clinica.html
+++ b/services/cartella-clinica.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="../img/favicon/comuneLogo.jpeg" />
+  <link rel="icon" type="image/png" href="../img/logo.png" />
 
-  <title>Santarcangelo Festival 2050</title>
+  <title>Cartella Clinica</title>
 
   <!-- JQuery -->
   <script src="../libraries/jquery-3.5.1.min.js"></script>
@@ -27,7 +27,7 @@
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="../index.html" class="navbar-brand d-flex align-items-center">
-          <img src="../img/logo/santarcangeloLogoScritto.png" width="250px" height="90px">
+          <img src="../img/logo.png" width="350px">
           <strong></strong>
         </a>
       </div>
@@ -37,7 +37,7 @@
   <main role="main">
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 id="pageTitle" class="jumbotron-heading">Santarcangelo Festival 2050</h1>
+        <h1 id="pageTitle" class="jumbotron-heading">Cartella Clinica</h1>
         <p id="articleDescription" class="text-muted">
         </p>
         <p>
@@ -68,10 +68,10 @@
 </body>
 <script type="text/javascript">
   $(document).ready(function() {
-      $.getJSON("../articles/articles.json", function(json) {
-          articleText.innerHTML = json["Articles"][2]["Text"];
-          articleDescription.innerHTML = json["Articles"][4]["Description"];
-      });
+    $.getJSON("../articles/articles.json", function(json) {
+      articleText.innerHTML = json["Services"][2]["Text"];
+      articleDescription.innerHTML = json["Services"][4]["Description"];
+    });
   });
 </script>
 
