--- a/services/esami-laboratorio.html
+++ b/services/esami-laboratorio.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" type="image/png" href="../img/logo.png" />
 
-  <title>Balconi Fioriti</title>
+  <title>Esami di Laboratorio</title>
 
   <!-- JQuery -->
   <script src="../libraries/jquery-3.5.1.min.js"></script>
@@ -26,7 +26,7 @@
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="../index.html" class="navbar-brand d-flex align-items-center">
-          <img src="img/logo.png" width="350px">
+          <img src="../img/logo.png" width="350px">
           <strong></strong>
         </a>
       </div>
@@ -37,7 +37,7 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 id="pageTitle" class="jumbotron-heading">Balconi Fioriti</h1>
+        <h1 id="pageTitle" class="jumbotron-heading">Esami di Laboratorio</h1>
         <p id="articleDescription" class="text-muted">
         </p>
         <p>
@@ -53,8 +53,6 @@
       </div>
     </section>
 
-
-    </div>
     </div>
   </main>
 
@@ -68,13 +66,12 @@
   </footer>
 
 </body>
-
 <script type="text/javascript">
   $(document).ready(function() {
-    $.getJSON("../articles/articles.json", function(json) {
-      articleText.innerHTML = json["Services"][4]["Text"];
-      articleDescription.innerHTML = json["Services"][4]["Description"];
-    });
+      $.getJSON("../articles/articles.json", function(json) {
+          articleText.innerHTML = json["Services"][0]["Text"];
+          articleDescription.innerHTML = json["Services"][4]["Description"];
+      });
   });
 </script>
 
