--- a/services/ricovero.html
+++ b/services/ricovero.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="../img/favicon/comuneLogo.jpeg" />
+  <link rel="icon" type="image/png" href="../img/logo.png" />
 
-  <title>Fiera di San Michele</title>
+  <title>Ricovero e Orari</title>
 
   <!-- JQuery -->
   <script src="../libraries/jquery-3.5.1.min.js"></script>
@@ -26,7 +26,7 @@
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="../index.html" class="navbar-brand d-flex align-items-center">
-          <img src="../img/logo/santarcangeloLogoScritto.png" width="250px" height="90px">
+          <img src="../img/logo.png" width="350px">
           <strong></strong>
         </a>
       </div>
@@ -37,7 +37,7 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 id="pageTitle" class="jumbotron-heading">Fiera di San Michele</h1>
+        <h1 id="pageTitle" class="jumbotron-heading">Ricovero e Orari</h1>
         <p id="articleDescription" class="text-muted">
         </p>
         <p>
@@ -53,6 +53,7 @@
       </div>
     </section>
 
+
     </div>
     </div>
   </main>
@@ -67,11 +68,12 @@
   </footer>
 
 </body>
+
 <script type="text/javascript">
   $(document).ready(function() {
     $.getJSON("../articles/articles.json", function(json) {
-      articleText.innerHTML = json["Articles"][4]["Text"];
-      articleDescription.innerHTML = json["Articles"][4]["Description"];
+      articleText.innerHTML = json["Services"][4]["Text"];
+      articleDescription.innerHTML = json["Services"][4]["Description"];
     });
   });
 </script>
