--- a/services/volontariato.html
+++ b/services/volontariato.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="../img/favicon/comuneLogo.jpeg" />
+  <link rel="icon" type="image/png" href="../img/logo.png" />
 
-  <title>San Martino Santarcangelo</title>
+  <title>I nostri Volontari</title>
 
   <!-- JQuery -->
   <script src="../libraries/jquery-3.5.1.min.js"></script>
@@ -17,8 +17,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
   <script src="../libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
   <script src="../js/article.js" type="text/javascript"></script>
-
 </head>
+
 
 <body>
 
@@ -26,7 +26,7 @@
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="../index.html" class="navbar-brand d-flex align-items-center">
-          <img src="../img/logo/santarcangeloLogoScritto.png" width="250px" height="90px">
+          <img src="../img/logo.png" width="350px">
           <strong></strong>
         </a>
       </div>
@@ -34,9 +34,10 @@
   </header>
 
   <main role="main">
+
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 id="pageTitle" class="jumbotron-heading">San Martino</h1>
+        <h1 id="pageTitle" class="jumbotron-heading">I nostri Volontari</h1>
         <p id="articleDescription" class="text-muted">
         </p>
         <p>
@@ -51,6 +52,9 @@
         </p>
       </div>
     </section>
+
+    </div>
+    </div>
   </main>
 
   <footer class="text-muted p-4">
@@ -61,13 +65,14 @@
       <p>Sito realizzato per progetto di Reti in Agosto 2021</p>
     </div>
   </footer>
+
 </body>
 <script type="text/javascript">
   $(document).ready(function() {
-      $.getJSON("../articles/articles.json", function(json) {
-          articleText.innerHTML = json["Articles"][1]["Text"];
-          articleDescription.innerHTML = json["Articles"][4]["Description"];
-      });
+    $.getJSON("../articles/articles.json", function(json) {
+      articleText.innerHTML = json["Services"][4]["Text"];
+      articleDescription.innerHTML = json["Services"][4]["Description"];
+    });
   });
 </script>
 
