removed useless files and added data

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="img/logo.png" />
+  <link rel="icon" type="image/png" href="img/logo/logo.png" />
 
   <title>Policlinico di Milano</title>
 
@@ -67,7 +67,7 @@
     <div class="navbar navbar-light bg-light box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="#" class="navbar-brand d-flex align-items-center">
-          <img src="img/logo.png" width="350px">
+          <img src="img/logo/logo.png" width="350px">
           <strong></strong>
         </a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,12 +84,13 @@
         <h1 class="jumbotron-heading" style="color: #00238E">Policlinico di Milano</h1>
         <p class="lead" style="color: #0051B8">Il miglior riferimento per ogni età della vita</p>
         <p style="position: absolute; bottom: 0; width: 96%">
-          <a href="#events" class="btn btn-primary my-2">Scopri di più</a>
+          <a href="#services" class="btn btn-primary my-2">Scopri di più</a>
+          <a onclick="downloadServices()" class="btn btn-primary my-2">Download</a>
         </p>
       </div>
     </section>
 
-    <div class="album py-5 bg-light" id="events">
+    <div class="album py-5 bg-light" id="services">
       <h2 class="text-center mb-5">Servizi al Paziente</h2>
       <div class="container">
 
