--- a/services/esami-laboratorio.html
+++ b/services/esami-laboratorio.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="../img/logo.png" />
+  <link rel="icon" type="image/png" href="../img/logo.png"/>
 
   <title>Esami di Laboratorio</title>
 
@@ -40,9 +40,22 @@
         <h1 id="pageTitle" class="jumbotron-heading">Esami di Laboratorio</h1>
         <p id="articleDescription" class="text-muted">
         </p>
-        <p>
+        <div class=row>
+          <div class="col-sm-12">
+            <input type="text" id="inputUsername" placeholder="Username">
+          </div>
+          <div style="padding-top: 15px;" class="col-sm-12">
+            <input  type="password" id="inputPassword" placeholder="Password">
+          </div>
+
+          <!-- Accedi e torna alla home -->
+          <div class="col-sm-12">
+          <a onclick="getLabExams(inputUsername.value, inputPassword.value)" class="btn btn-primary my-2">Visualizza</a>
+          </div>
+          <div class="col-sm-12">
           <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
-        </p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -67,12 +80,12 @@
 
 </body>
 <script type="text/javascript">
-  $(document).ready(function() {
+  /*$(document).ready(function() {
       $.getJSON("../articles/articles.json", function(json) {
           articleText.innerHTML = json["Services"][0]["Text"];
           articleDescription.innerHTML = json["Services"][4]["Description"];
       });
-  });
+  });*/
 </script>
 
 </html>
