--- a/services/volontariato.html
+++ b/services/volontariato.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="../img/logo.png" />
+  <link rel="icon" type="image/png" href="../img/logo/logo.png" />
 
   <title>I nostri Volontari</title>
 
@@ -26,7 +26,7 @@
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="../index.html" class="navbar-brand d-flex align-items-center">
-          <img src="../img/logo.png" width="350px">
+          <img src="../img/logo/logo.png" width="350px">
           <strong></strong>
         </a>
       </div>
@@ -50,6 +50,10 @@
       <div id="article">
         <p id="articleText">
         </p>
+        <div id="tableVolunteers">
+          <ul class="list-group" id="listVolunteers">
+          </ul> 
+        </div>
       </div>
     </section>
 
@@ -69,9 +73,14 @@
 </body>
 <script type="text/javascript">
   $(document).ready(function() {
-    $.getJSON("../articles/articles.json", function(json) {
-      articleText.innerHTML = json["Services"][4]["Text"];
-      articleDescription.innerHTML = json["Services"][4]["Description"];
+    $.getJSON("../datad/volunteers.json", function(json) {
+    var child = "";
+    console.log(json["Volunteers"]);
+    for(var i = 0; i < json["Volunteers"].length; i++){
+      child +='<li class="list-group-item">' + json["Volunteers"][i]["Nome"] + json["Volunteers"][i]["Cognome"] + json["Volunteers"][i]["Telefono"] +'</li>'
+    }
+
+    listVolunteers.append(child);
     });
   });
 </script>
