removed useless files and corrected

--- a/services/esami-laboratorio.html
+++ b/services/esami-laboratorio.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="../img/logo.png"/>
+  <link rel="icon" type="image/png" href="../img/logo/logo.png"/>
 
   <title>Esami di Laboratorio</title>
 
@@ -26,7 +26,7 @@
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="../index.html" class="navbar-brand d-flex align-items-center">
-          <img src="../img/logo.png" width="350px">
+          <img src="../img/logo/logo.png" width="350px">
           <strong></strong>
         </a>
       </div>
